Source/WebCore/platform/graphics/FontCascade.h
@@ -91,7 +91,6 @@ struct GlyphOverflow {
 };
 
 #if USE(CORE_TEXT)
-void fillVectorWithHorizontalGlyphPositions(Vector<CGPoint, 256>& positions, CGContextRef, const CGSize* advances, unsigned count, const FloatPoint&);
 AffineTransform computeOverallTextMatrix(const Font&);
 AffineTransform computeVerticalTextMatrix(const Font&, const AffineTransform& previousTextMatrix);
 #endif
